Fix table width and text-align

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -48,4 +48,5 @@ p{
     font-size: x-large;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin-top: 10px;
+    text-align: center;
 }
